--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Linktree</title>
+  <title>Medsos</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 <body>
   <section>
     <main>
-      <img src="rifan1.png" alt="Sandhika Galih">
+      <img src="rifan1.png" alt="Rifan ">
       <h2>Ahmad Rif'an Fairuz</h2>
       <a href="http://istagram.com/rif_2505"><i class="fa-brands fa-instagram"></i> Instagram</a>
       <a href="http://youtube.com/@rifanfairuz5780"><i class="fa-brands fa-youtube"></i> YouTube</a>
